fix: fix horizontal scroll on iphone 5/5s/se

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  padding: 30px;
-  min-width: 320px;
+  padding: 20px;
+  min-width: 280px;
 
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
@@ -53,7 +53,7 @@ h3 {
 
 a {
   color: #f0f0f0;
-  transition: all 0.5s;
+  transition: all 0.25s;
 }
 
 a:hover {
@@ -124,6 +124,10 @@ a:hover {
 }
 
 @media screen and (min-width: 650px) {
+  body {
+    padding: 30px;
+  }
+
   .container {
     display: grid;
     grid-template-columns: 1fr 250px;
